force-app/main/default/objects/Opportunity/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MAJ</fullName>
            </value>
            <value>
                <fullName>MKG</fullName>
            </value>
            <value>
                <fullName>APS</fullName>
            </value>
            <value>
                <fullName>STW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>