force-app/main/default/objects/Opportunity/fields/ContactPricipal__c.field-meta.xml
<CustomField>
    <fullName>ContactPricipal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Pricipal</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>