force-app/main/default/objects/Opportunity/fields/Date_Formation__c.field-meta.xml
<CustomField>
    <fullName>Date_Formation__c</fullName>
    <label>Date De La Formation</label>
    <type>DateTime</type>
</CustomField>