force-app/main/default/objects/Opportunity/fields/Duree_Formation__c.field-meta.xml
<CustomField>
    <fullName>Duree_Formation__c</fullName>
    <inlineHelpText>Nombre D&apos;Heures
Nombre De Jours</inlineHelpText>
    <label>Durée De La Formation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>