force-app/main/default/objects/Opportunity/fields/Formation_choisie__c.field-meta.xml
<CustomField>
    <fullName>Formation_choisie__c</fullName>
    <label>Formation choisie</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Formation HACCP</fullName>
            </value>
            <value>
                <fullName>Formation Piloter Mon Site</fullName>
            </value>
            <value>
                <fullName>Formation Galette Des Rois</fullName>
            </value>
            <value>
                <fullName>Formation Gâteaux de Fêtes</fullName>
            </value>
            <value>
                <fullName>Formation Google ADS</fullName>
            </value>
            <value>
                <fullName>Formation Management Pilotage</fullName>
            </value>
            <value>
                <fullName>Formation Négociation Commerciale</fullName>
            </value>
            <value>
                <fullName>Formation Réseaux Sociaux</fullName>
            </value>
            <value>
                <fullName>Formation Patisserie Classique</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>