force-app/main/default/objects/Opportunity/fields/Nombre_Stagiaire__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Stagiaire__c</fullName>
    <label>Nombre De Stagiaire</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>