force-app/main/default/objects/Opportunity/fields/Num_ro_De_Dossier__c.field-meta.xml
<CustomField>
    <fullName>Num_ro_De_Dossier__c</fullName>
    <displayFormat>{YY}-{0000}</displayFormat>
    <label>Numéro De Dossier</label>
    <type>AutoNumber</type>
</CustomField>