force-app/main/default/objects/Opportunity/fields/Taux__c.field-meta.xml
<CustomField>
    <fullName>Taux__c</fullName>
    <inlineHelpText>Taux Horaire
Taux journalier
Taux Par formation</inlineHelpText>
    <label>Taux</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>